deleted:    assets/css/about.css 	new file:   assets/css/header.css 	modified:   index.html 	modified:   layout/about.html 	new file:   layout/projects.html

--- a/layout/about.html
+++ b/layout/about.html
@@ -5,13 +5,13 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="/assets/css/overide.css">
-     <link rel="stylesheet" href="/assets/css/about.css">
+     <link rel="stylesheet" href="/assets/css/header.css">
      <title>About Me</title>
 </head>
 
 <body>
-     <nav class="nav">
-          <div class="logo">HPINGC</div>
+     <nav class="header">
+          <div class="logo">LOGO</div>
           <div class="toggle-theme"></div>
           <ul class="menu">
                <li><a href="/index.html" title="Home"><span>Home</span></a></li>
@@ -19,7 +19,7 @@
                <li><a href="/projects.html" title="Projects"><span>Projects</span></a></li>
           </ul>
      </nav>
-     <h1 class ="title">About Me</h1>
+     <!-- <h1 class ="title">INDEX</h1> -->
 </body>
 
 </html>
