--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -10,6 +10,10 @@
   width: 100%;
   border-radius: 10px 10px 10px 10px; /* Bevel all corners */
 
+  /* position: absolute;
+  top: 75% */
+
+
 }
 .footer-content {
   display: flex;
