--- a/assets/css/overide.css
+++ b/assets/css/overide.css
@@ -7,10 +7,10 @@
   --CardBackground: #fff0d9;
   --BackgroundColor: #fdd6b2;
   --BorderColor: #ffbb80;
-  
-  --HeaderWidth: 65%;
-  --BodyWidth: 67%;
-  --FooterWidth: 65%;
+
+  --HeaderWidth: 45%;
+  --BodyWidth: 47%;
+  --FooterWidth: 45%;
   --ContentMaxWidth: 1200px;
 }
 
@@ -40,12 +40,7 @@ body {
 }
 
 /* Section headings */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   color: var(--AccentColor);
 }
 
