--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
 :root {
-  --logo-font-size: 1.2rem;
-  --logo-font-color: black;
-  --content-font-size: 1rem;
-  --content-font-color: black;
+  --font-color: black;
+  --font-size: 1rem;
+  --content-gap: 30px;
 }
 
 * {
@@ -39,9 +38,9 @@
   display: flex;
   align-items: center;
 
-  font-size: var(--logo-font-size);
+  font-size: 1.2rem;
   text-decoration: none;
-  color: black;
+  color: var(--font-color);
   font-weight: 600;
 }
 
@@ -51,7 +50,7 @@
   text-align: center;
   align-items: center;
   padding: 0 1rem;
-  font-size: var(--content-font-size);
+  font-size: var(--font-size);
 }
 
 .navbar_menu li {
@@ -63,6 +62,69 @@
   display: block;
   padding: 0.5rem;
   text-decoration: none;
+}
+
+/* POST */
+
+.article-single {
+  justify-content: first baseline;
+  align-items: center;
+
+  margin: 0 auto;
+
+  padding: 80px;
+
+  width: 100%;
+  max-width: 900px;
+}
+
+.post-header {
+  margin-bottom: calc(var(--content-gap) * 2);
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 15px;
+}
+
+.entry-cover {
+  margin-bottom: calc(var(--content-gap) * 2);
+}
+
+.post-content {
+  margin-bottom: var(--content-gap);
+}
+
+.toggle-theme-btn {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  margin-left: 1rem;
+}
+
+.dark-theme {
+  --font-color: #eee;
+  background: #222;
+}
+
+.dark-theme body {
+  background: #222;
+  color: #eee;
+}
+
+.dark-theme .navbar_logo,
+.dark-theme .navbar_menu a {
+  color: #eee;
+}
+
+.footer {
+  text-align: center;
+}
+
+footer a {
+  color: white;
 }
 
 /* @media screen and (max-width: 768px) {
