--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,7 @@
 img {
   border-radius: 25px;
   max-width: 100%;
-  
-
+  margin-bottom: var(--content-gap);
 }
 
 /* Navigation */
@@ -27,7 +26,6 @@ img {
   justify-content: center;
   align-items: center;
   font-size: var(--font-size);
-  /* position: sticky; */
   top: 0;
   background: white;
   z-index: 100;
@@ -76,9 +74,9 @@ img {
 /* Article Layout */
 .article-single {
   margin: 0 auto;
-  padding: 80px 20px;
-  width: 100%;
-  max-width: 900px;
+  padding: 20px 20px;
+  width: 90%;
+  max-width: 750px;
 }
 
 .post-header {
@@ -98,7 +96,7 @@ img {
 
 /* Markdown Content */
 .post-content {
-  line-height: 1.8;
+  line-height: 1.2;
   margin-bottom: var(--content-gap);
 }
 
@@ -124,7 +122,7 @@ img {
   text-underline-offset: 0.2em;
 }
 
-.post-content ul, 
+.post-content ul,
 .post-content ol {
   margin-bottom: 1.2em;
   padding-left: 1.5em;
@@ -144,7 +142,7 @@ img {
 }
 
 .post-content code {
-  font-family: "JetBrains Mono", monospace;
+  font-family: "Cascadia Code", monospace;
   font-size: 0.9em;
 }
 
